include/turbo/turbo.h

typedef struct turbo_model     turbo_model;     /* a bundle loaded on a context */
typedef struct turbo_session   turbo_session;   /* inputs, one run at a time */
/* ---- Small types ------------------------------------------------------- */

/* UTF-8 view. ptr may be NULL only when len is 0. Not NUL-terminated. */
typedef struct turbo_text {
    const char *ptr;
    uint64_t    len;
} turbo_text;
/* Caller-owned. On success code is 0 and message[0] is 0. */
typedef struct turbo_error {
    uint32_t struct_size;
    int32_t  code;
    uint32_t field;     /* 1-based field index for the two errors that name one, else 0 */
    char     message[TURBO_ERROR_MESSAGE_LEN];   /* NUL-terminated UTF-8 */
} turbo_error;
/* ---- Session and run --------------------------------------------------- */

typedef struct turbo_session_desc {
    uint32_t struct_size;
    uint32_t max_batch;   /* 0 = the model's */
    uint32_t max_seq;     /* 0 = the model's */
} turbo_session_desc;
/* Fields are numbered from 1 for turbo_error.field and options_honored.
 * 0 in any field means "what the bundle says". */
typedef struct turbo_embed_options {
    uint32_t struct_size;
    uint32_t truncate;      /* 1: TURBO_TRUNCATE_* */
    uint32_t max_tokens;    /* 2: token budget per row */
    uint32_t prompt_role;   /* 3: TURBO_PROMPT_* */
    uint32_t normalize;     /* 4: TURBO_NORMALIZE_* */
    uint32_t pooling;       /* 5: TURBO_POOLING_* */
    uint32_t output_dim;    /* 6: keep only the first output_dim values of each vector */
} turbo_embed_options;
/* Caller-prepared rows, [batch, seq] int32, row_stride elements between row
 * starts (0 = seq). types may be NULL for all zero. The memory may be a
 * buffer the caller imported, in which case nothing is copied on the host. */
typedef struct turbo_token_batch {
    uint32_t       struct_size;
    uint32_t       batch;
    uint32_t       seq;
    uint32_t       row_stride;
    const int32_t *ids;
    const int32_t *mask;
    const int32_t *types;
} turbo_token_batch;
int32_t turbo_session_create(turbo_model *m, const turbo_session_desc *desc, turbo_session **out, turbo_error *err);
void    turbo_session_release(turbo_session *s);
/* Tokenize with the bundle's tokenizer, then write the rows. opts may be NULL. */
int32_t turbo_session_write_text(turbo_session *s, const turbo_text *texts, uint32_t count,
                                 const turbo_embed_options *opts, turbo_error *err);
/* Write rows the caller tokenized. opts may be NULL. */
int32_t turbo_session_write_tokens(turbo_session *s, const turbo_token_batch *batch,
                                   const turbo_embed_options *opts, turbo_error *err);