bindings/java/src/main/java/ai/pipestream/turbo/ffi/TurboNative.java


        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_model_io_info(turbo_model *m, uint32_t direction, uint32_t index, turbo_tensor_info *out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_model_io_info$descriptor() {
        return turbo_model_io_info.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_model_io_info(turbo_model *m, uint32_t direction, uint32_t index, turbo_tensor_info *out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_model_io_info$handle() {
        return turbo_model_io_info.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_model_io_info(turbo_model *m, uint32_t direction, uint32_t index, turbo_tensor_info *out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_model_io_info$address() {
        return turbo_model_io_info.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_model_io_info(turbo_model *m, uint32_t direction, uint32_t index, turbo_tensor_info *out, turbo_error *err)
     * }
     */
    public static int turbo_model_io_info(MemorySegment m, int direction, int index, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_model_io_info.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_model_io_info", m, direction, index, out, err);
            }
            return (int)mh$.invokeExact(m, direction, index, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_model_label {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_model_label");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_model_label(turbo_model *m, uint32_t index, turbo_text *out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_model_label$descriptor() {
        return turbo_model_label.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_model_label(turbo_model *m, uint32_t index, turbo_text *out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_model_label$handle() {
        return turbo_model_label.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_model_label(turbo_model *m, uint32_t index, turbo_text *out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_model_label$address() {
        return turbo_model_label.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_model_label(turbo_model *m, uint32_t index, turbo_text *out, turbo_error *err)
     * }
     */
    public static int turbo_model_label(MemorySegment m, int index, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_model_label.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_model_label", m, index, out, err);
            }
            return (int)mh$.invokeExact(m, index, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_session_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_session_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_session_create(turbo_model *m, const turbo_session_desc *desc, turbo_session **out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_session_create$descriptor() {
        return turbo_session_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_session_create(turbo_model *m, const turbo_session_desc *desc, turbo_session **out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_session_create$handle() {
        return turbo_session_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_session_create(turbo_model *m, const turbo_session_desc *desc, turbo_session **out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_session_create$address() {
        return turbo_session_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_session_create(turbo_model *m, const turbo_session_desc *desc, turbo_session **out, turbo_error *err)
     * }
     */
    public static int turbo_session_create(MemorySegment m, MemorySegment desc, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_session_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_session_create", m, desc, out, err);
            }
            return (int)mh$.invokeExact(m, desc, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_session_release {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_session_release");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void turbo_session_release(turbo_session *s)
     * }
     */
    public static FunctionDescriptor turbo_session_release$descriptor() {
        return turbo_session_release.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void turbo_session_release(turbo_session *s)
     * }
     */
    public static MethodHandle turbo_session_release$handle() {
        return turbo_session_release.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void turbo_session_release(turbo_session *s)
     * }
     */
    public static MemorySegment turbo_session_release$address() {
        return turbo_session_release.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void turbo_session_release(turbo_session *s)
     * }
     */
    public static void turbo_session_release(MemorySegment s) {
        var mh$ = turbo_session_release.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_session_release", s);
            }
            mh$.invokeExact(s);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_session_write_text {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_session_write_text");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_session_write_text(turbo_session *s, const turbo_text *texts_ptr, uint32_t count, const turbo_embed_options *opts, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_session_write_text$descriptor() {
        return turbo_session_write_text.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_session_write_text(turbo_session *s, const turbo_text *texts_ptr, uint32_t count, const turbo_embed_options *opts, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_session_write_text$handle() {
        return turbo_session_write_text.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_session_write_text(turbo_session *s, const turbo_text *texts_ptr, uint32_t count, const turbo_embed_options *opts, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_session_write_text$address() {
        return turbo_session_write_text.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_session_write_text(turbo_session *s, const turbo_text *texts_ptr, uint32_t count, const turbo_embed_options *opts, turbo_error *err)
     * }
     */
    public static int turbo_session_write_text(MemorySegment s, MemorySegment texts_ptr, int count, MemorySegment opts, MemorySegment err) {
        var mh$ = turbo_session_write_text.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_session_write_text", s, texts_ptr, count, opts, err);
            }
            return (int)mh$.invokeExact(s, texts_ptr, count, opts, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_session_write_tokens {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_session_write_tokens");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_session_write_tokens(turbo_session *s, const turbo_token_batch *batch, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_session_write_tokens$descriptor() {
        return turbo_session_write_tokens.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_session_write_tokens(turbo_session *s, const turbo_token_batch *batch, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_session_write_tokens$handle() {
        return turbo_session_write_tokens.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_session_write_tokens(turbo_session *s, const turbo_token_batch *batch, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_session_write_tokens$address() {
        return turbo_session_write_tokens.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_session_write_tokens(turbo_session *s, const turbo_token_batch *batch, turbo_error *err)
     * }
     */
    public static int turbo_session_write_tokens(MemorySegment s, MemorySegment batch, MemorySegment err) {
        var mh$ = turbo_session_write_tokens.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_session_write_tokens", s, batch, err);
            }
            return (int)mh$.invokeExact(s, batch, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
